# word-piece-encoder

./: CMakeLists.txt  README.md  main.cpp
embedding_utils/include/: VectorMaths.h
embedding_utils/src/: VectorMaths.cpp
encoder/include/: VocabList.h  WordPiece.h
encoder/src/: WordPiece.cpp
examples/: example_usage_1.cpp  example_usage_2.cpp
include/sentenCPP/inference/: OnnxEngine.h
include/sentenCPP/tokenizer/: TokenizerInterface.h
inference/include/: InferenceInterface.h  OnnxEngine.h
inference/src/: OnnxEngine.cpp
src/: OnnxEngine.cpp
tokenizer/include/: BPE.h  TokenizerInterface.h  VocabList.h  WordPiece.h
tokenizer/src/: VocabList.cpp  WordPiece.cpp
